# Backlog-Builder-v2

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
companion/: index.html
memory/: MEMORY.md  project_hobbyvault.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/: cfgmgr32.exp  cfgmgr32.lib  comctl32.exp  comctl32.lib  comdlg32.exp  comdlg32.lib  dbghelp.lib  dwmapi.exp  dwmapi.lib  gdi32.exp  gdi32.lib  imm32.exp  imm32.lib  magnification.exp  magnification.lib  msimg32.exp  msimg32.lib  oleacc.exp  oleacc.lib  opengl32.exp  opengl32.lib  setupapi.exp  setupapi.lib  shell32.exp  shell32.lib  shlwapi.exp  shlwapi.lib  uiautomationcore.exp  uiautomationcore.lib  uxtheme.exp  uxtheme.lib  version.exp  version.lib  winmm.exp  winmm.lib  wtsapi32.exp  wtsapi32.lib
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/art/: page.tsx
src/components/: AddEntryModal.tsx  AvatarCropModal.tsx  ClientLayout.tsx  EntryCard.tsx  Header.tsx  HobbyContext.tsx  HobbyPage.tsx  MechCard.tsx  OnboardingInstructions.tsx  OnboardingSelector.tsx  PhotoGallery.tsx  QuickAddPanel.tsx  QuickLogModal.tsx  Sidebar.tsx  StatCard.tsx  UpdateBanner.tsx  hobbyIcons.ts  mechStyles.ts
src/lib/: apiKeys.ts  db.ts  hltb.ts  hobbies.ts  hours.ts  image.ts  steam.ts  sync.ts  theme.ts
src/types/: database.ts
supabase/: schema.sql
(+16 files in other folders)
